iowow (1.4.16) UNRELEASED; urgency=medium

  * Added .ini file parsing utility module (iwini.h)
  * Added iw_cond_timed_wait_ms() (iwth.h)
  * Added iwstw_set_on_task_discard(), iwstw_schedule_only() (iwstw.h)
  * Fixed iwp_exec_path() on FreeBSD sinceprocfs(5) is not mounted by default in FreeBSD.
  * iwp_exec_path() implemented for FreeBSD & Macos
  * Added `int64_t iwatoi2(const char *str, size_t len)` (iwconv.h)
  * iwpool_split_xx() now returns const pointer (iwpool.h)
  * Fixed iwre() regexp compilation error.
  * Added new regexp API implementation (iwre.h) based on https://github.com/jserv/cregex/
  * Removed iwsha256() from sources. Use iwnet/beassl for hashing instead.

 -- Anton Adamansky <adamansky@gmail.com>  Thu, 24 Feb 2022 09:18:55 +0700

iowow (1.4.15) testing; urgency=medium

  * Added format checking __attribute__ to all printf like functions.

 -- Anton Adamansky <adamansky@gmail.com>  Fri, 18 Feb 2022 21:54:04 +0700

iowow (1.4.14) testing; urgency=medium

  * Used ftruncate() instead of posix_fallocate() due to EINVAL on ZFS (unix.c)
  * Enable XOPEN_SOURCE only for linux
  * Fixed incorrect selection of `strerror_r` for musl builds.
  * Set appropriate _XOPEN_SOURCE=700 level for `nftw` (unix.c)
  * iwxstr_printf() now conforms to stdlib printf function (iwxstr.h)
  * Moved some useful defs from iwutil.h into basedefs.h
  * Fixed iwre_match() function signatute allowing `const  char* input`
  (iwre.h)
  * Added lightweight regexp implementation (iwre.h)
  * Added `size_t iwxstr_asize(IWXSTR*)` (iwxstr.h)
  * Added locale independed strtod: iwstrtod() (iwconv.h)

 -- Anton Adamansky <adamansky@gmail.com>  Mon, 14 Feb 2022 18:01:17 +0700

iowow (1.4.13) testing; urgency=medium

  * Fixed SEGV in iwkv_cursor_open with zero-length key and IWDB_VNUM64_KEYS (#42)
  * Fixed Heap UAF in iwkv_close after invoking iwkv_db_set_meta on a database (#41)
  * Added `iwxstr_wrap()` (iwxstr.h)
  * Added `RCT()` checker for pthread routines (basedefs.h)