@@ -10,9 +10,12 @@
 #define MIN_BUCKETS 64
 #define STEPS       4
 
-typedef struct {
-  void    *key;
-  void    *val;
+struct lru_node;
+
+typedef struct entry {
+  void *key;
+  void *val;
+  struct lru_node *lru_node;
   uint32_t hash;
 } entry_t;
 
@@ -22,6 +25,12 @@ typedef struct {
   uint32_t total;
 } bucket_t;
 
+typedef struct lru_node {
+  struct lru_node *next;
+  struct lru_node *prev;
+  void *key;
+} lru_node_t;
+
 typedef struct _IWHMAP {
   uint32_t  count;
   uint32_t  buckets_mask;
@@ -30,6 +39,12 @@ typedef struct _IWHMAP {
   int (*cmp_fn)(const void*, const void*);
   uint32_t (*hash_key_fn)(const void*);
   void (*kv_free_fn)(void*, void*);
+
+  // LRU
+  struct lru_node *lru_first;
+  struct lru_node *lru_last;
+  iwhmap_lru_eviction_needed lru_ev;
+  void *lru_ev_user_data;
 
   bool int_key_as_pointer_value;
 } hmap_t;
@@ -108,8 +123,8 @@ IW_INLINE uint32_t _hash_buf_key(const void *key) {
 IWHMAP* iwhmap_create(
   int (*cmp_fn)(const void*, const void*),
   uint32_t (*hash_key_fn)(const void*),
-  void (*kv_free_fn)(void*, void*)) {
-
+  void (*kv_free_fn)(void*, void*)
+  ) {
   if (!hash_key_fn) {
     return 0;
   }
@@ -134,6 +149,9 @@ IWHMAP* iwhmap_create(
   hm->kv_free_fn = kv_free_fn;
   hm->buckets_mask = MIN_BUCKETS - 1;
   hm->count = 0;
+  hm->lru_first = hm->lru_last = 0;
+  hm->lru_ev = 0;
+  hm->lru_ev_user_data = 0;
   hm->int_key_as_pointer_value = false;
   return hm;
 }
@@ -164,7 +182,7 @@ static entry_t* _entry_find(IWHMAP *hm, const void *key, uint32_t hash) {
   bucket_t *bucket = hm->buckets + (hash & hm->buckets_mask);
   entry_t *entry = bucket->entries;
   for (entry_t *end = entry + bucket->used; entry < end; ++entry) {
-    if ((hash == entry->hash) && (hm->cmp_fn(key, entry->key) == 0)) {
+    if (hash == entry->hash && hm->cmp_fn(key, entry->key) == 0) {
       return entry;
     }
   }
@@ -201,6 +219,7 @@ static entry_t* _entry_add(IWHMAP *hm, void *key, uint32_t hash) {
   entry->hash = hash;
   entry->key = 0;
   entry->val = 0;
+  entry->lru_node = 0;
 
   return entry;
 }
@@ -231,6 +250,7 @@ static void _rehash(hmap_t *hm, uint32_t num_buckets) {
       }
       entry_new->key = entry_old->key;
       entry_new->val = entry_old->val;
+      entry_new->lru_node = entry_old->lru_node;
     }
   }
 
@@ -252,41 +272,74 @@ fail:
   free(buckets);
 }
 
-iwrc iwhmap_put(IWHMAP *hm, void *key, void *val) {
-  uint32_t hash = hm->hash_key_fn(key);
-  entry_t *entry = _entry_add(hm, key, hash);
-  if (!entry) {
-    return iwrc_set_errno(IW_ERROR_ERRNO, errno);
+static void _lru_entry_update(IWHMAP *hm, entry_t *entry) {
+  if (entry->lru_node) {
+    entry->lru_node->key = entry->key;
+    if (entry->lru_node->next) {
+      struct lru_node *prev = entry->lru_node->prev;
+      if (prev) {
+        prev->next = entry->lru_node->next;
+      } else {
+        hm->lru_first = entry->lru_node->next;
+      }
+      entry->lru_node->next->prev = prev;
+      hm->lru_last->next = entry->lru_node;
+      entry->lru_node->next = 0;
+      entry->lru_node->prev = hm->lru_last;
+      hm->lru_last = entry->lru_node;
+    }
+  } else {
+    entry->lru_node = malloc(sizeof(*entry->lru_node));
+    if (entry->lru_node) {
+      entry->lru_node->key = entry->key;
+      if (hm->lru_last) {
+        hm->lru_last->next = entry->lru_node;
+        entry->lru_node->next = 0;
+        entry->lru_node->prev = hm->lru_last;
+        hm->lru_last = entry->lru_node;
+      } else {
+        hm->lru_first = hm->lru_last = entry->lru_node;
+        entry->lru_node->next = entry->lru_node->prev = 0;
+      }
+    }
   }
+}
 
-  hm->kv_free_fn(hm->int_key_as_pointer_value ? 0 : entry->key, entry->val);
-
-  entry->key = key;
-  entry->val = val;
-
-  if (hm->count > hm->buckets_mask) {
-    _rehash(hm, _n_buckets(hm) * 2);
+static void _lru_entry_remove(IWHMAP *hm, entry_t *entry) {
+  if (entry->lru_node->next) {
+    struct lru_node *prev = entry->lru_node->prev;
+    if (prev) {
+      prev->next = entry->lru_node->next;
+    } else {
+      hm->lru_first = entry->lru_node->next;
+    }
+    entry->lru_node->next->prev = prev;
+  } else if (entry->lru_node->prev) {
+    entry->lru_node->prev->next = 0;
+    hm->lru_last = entry->lru_node->prev;
+  } else {
+    hm->lru_last = hm->lru_first = 0;
   }
-  return 0;
+  free(entry->lru_node);
+  entry->lru_node = 0;
 }
 
 void* iwhmap_get(IWHMAP *hm, const void *key) {
   uint32_t hash = hm->hash_key_fn(key);
   entry_t *entry = _entry_find(hm, key, hash);
   if (entry) {
+    if (hm->lru_ev) {
+      _lru_entry_update(hm, entry);
+    }
     return entry->val;
   } else {
     return 0;
   }
 }
 
-void iwhmap_remove(IWHMAP *hm, const void *key) {
-  uint32_t hash = hm->hash_key_fn(key);
-  bucket_t *bucket = hm->buckets + (hash & hm->buckets_mask);
-
-  entry_t *entry = _entry_find(hm, key, hash);
-  if (!entry) {
-    return;
+static void _entry_remove(IWHMAP *hm, bucket_t *bucket, entry_t *entry) {
+  if (entry->lru_node) {
+    _lru_entry_remove(hm, entry);
   }
 
   hm->kv_free_fn(hm->int_key_as_pointer_value ? 0 : entry->key, entry->val);
@@ -305,7 +358,6 @@ void iwhmap_remove(IWHMAP *hm, const void *key) {
   } else {
     uint32_t steps_used = bucket->used / STEPS;
     uint32_t steps_total = bucket->total / STEPS;
-
     if (steps_used + 1 < steps_total) {
       entry_t *entries_new = realloc(bucket->entries, (steps_used + 1) * STEPS * sizeof(entries_new[0]));
       if (entries_new) {
@@ -316,7 +368,74 @@ void iwhmap_remove(IWHMAP *hm, const void *key) {
   }
 }
 
-int iwhmap_count(IWHMAP *hm) {
+void iwhmap_remove(IWHMAP *hm, const void *key) {
+  uint32_t hash = hm->hash_key_fn(key);
+  bucket_t *bucket = hm->buckets + (hash & hm->buckets_mask);
+  entry_t *entry = _entry_find(hm, key, hash);
+  _entry_remove(hm, bucket, entry);
+}
+
+iwrc iwhmap_put(IWHMAP *hm, void *key, void *val) {
+  uint32_t hash = hm->hash_key_fn(key);
+  entry_t *entry = _entry_add(hm, key, hash);
+  if (!entry) {
+    return iwrc_set_errno(IW_ERROR_ERRNO, errno);
+  }
+
+  hm->kv_free_fn(hm->int_key_as_pointer_value ? 0 : entry->key, entry->val);
+
+  entry->key = key;
+  entry->val = val;
+
+  if (hm->lru_ev) {
+    _lru_entry_update(hm, entry);
+  }
+
+  if (hm->count > hm->buckets_mask) {
+    _rehash(hm, _n_buckets(hm) * 2);
+  }
+
+  while (hm->lru_first && hm->lru_ev(hm, hm->lru_ev_user_data)) {
+    hash = hm->hash_key_fn(hm->lru_first->key);
+    bucket_t *bucket = hm->buckets + (hash & hm->buckets_mask);
+    entry = _entry_find(hm, hm->lru_first->key, hash);
+    assert(entry); // Should never be zero.
+    _entry_remove(hm, bucket, entry);
+  }
+
+  return 0;
+}
+
+iwrc iwhmap_put_i32(IWHMAP *hm, int32_t key, void *val) {
+  return iwhmap_put(hm, (void*) (intptr_t) key, val);
+}
+
+iwrc iwhmap_put_i64(IWHMAP *hm, int64_t key, void *val) {
+  if (hm->int_key_as_pointer_value) {
+    return iwhmap_put(hm, (void*) (intptr_t) key, val);
+  } else {
+    int64_t *kv = malloc(sizeof(*kv));
+    if (!kv) {
+      return iwrc_set_errno(IW_ERROR_ALLOC, errno);
+    }
+    memcpy(kv, &key, sizeof(*kv));
+    iwrc rc = iwhmap_put(hm, kv, val);
+    if (rc) {
+      free(kv);
+    }
+    return rc;
+  }
+}
+
+void* iwhmap_get_i64(IWHMAP *hm, int64_t key) {
+  if (hm->int_key_as_pointer_value) {
+    return iwhmap_get(hm, (void*) (intptr_t) key);
+  } else {
+    return iwhmap_get(hm, &key);
+  }
+}
+
+uint32_t iwhmap_count(IWHMAP *hm) {
   return hm->count;
 }
 
@@ -386,6 +505,21 @@ void iwhmap_destroy(IWHMAP *hm) {
     }
     free(b->entries);
   }
+  for (lru_node_t *n = hm->lru_first; n; ) {
+    lru_node_t *nn = n->next;
+    free(n);
+    n = nn;
+  }
   free(hm->buckets);
   free(hm);
+}
+
+bool iwhmap_lru_eviction_max_count(IWHMAP *hm, void *max_count_val) {
+  uint32_t max_count = (uintptr_t) max_count_val;
+  return iwhmap_count(hm) > max_count;
+}
+
+void iwhmap_lru_init(IWHMAP *hm, iwhmap_lru_eviction_needed ev, void *ev_user_data) {
+  hm->lru_ev = ev;
+  hm->lru_ev_user_data = ev_user_data;
 }
